Se inicia verify

--- a/Login/login.html
+++ b/Login/login.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="config.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
+
+    <div class="padre2"> 
+
+        <a href="/Mejorameintolab/Verify/verify.html"><div class="circulo2"> <img src="../assets/Vector.png" alt=""></div>
+        <h1 class="titulo2"> Nilkanth Medical</h1>
+        <p class="parrafo2">Plase enter your MObil number/to Login</p>
+        <div class="boton1"> +502 6543 7654 </div>
+        <div class="boton2"> CONTINUE</div>
+        </a>
+
+
+    </div>
     
 </body>
 </html>
