--- a/Walk/walk.html
+++ b/Walk/walk.html
@@ -13,7 +13,7 @@
 
   <a href="../Login/login.html"><div class="padre">
     <div class="imagen">
-        <img src="../assets/splash_image_1.png" alt="">
+        <img src="/Mejorameintolab/assets/splash_image_1.png" alt="">
     </div>
     <span class="Me">View and buy Medicine online</span>
     <p class="Parrafo">Lnisi porro adipisci sint sed nesciunt quae ipsum. Vero, delectus deleniti.</p>
