inicia vista product

--- a/Verify/verify.html
+++ b/Verify/verify.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div class="verify-log">
+ <a href="../Succes/succes.html"> <div class="verify-log">
   
   <img src="/Mejorameintolab/assets/back_btn.png" class="flecha">
 
@@ -33,6 +33,7 @@
 
   <span class="tiempo">The verify code will expire in 00:59</span>
 </div>
+</a>
 
     
 </body>
