Se inicia succes2

--- a/Checkout/checkout.html
+++ b/Checkout/checkout.html
@@ -4,8 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chekout</title>
+    <link rel="stylesheet" href="config.css">
+    <link rel="stylesheet" href="checkout.css">
 </head>
 <body>
-    
+
+   
+<div class="div-checkout">
+    <img src="../assets/back_btn.png" class="back-btn4">
+    <h2 class="your">Your cart</h2>
+
+    <div class="items-row">
+        <h3 class="items">2 Items in your cart</h3>
+        <span class="more-cart"> TOTAL Rs.185.00</span>
+    </div>
+
+    <h2 class="delivery">Delivery Address</h2>
+
+     <div class="card active">
+    <div class="radio"></div>
+    <div class="card-content">
+      <div class="card-title">Home</div>
+      <div class="card-phone">(205) 555-024</div>
+      <div class="card-address">1786 Wheeler Bridge</div>
+    </div>
+    <div class="edit">✏️</div>
+  </div>
+
+  <div class="card">
+    <div class="radio"></div>
+    <div class="card-content">
+      <div class="card-title">Office</div>
+      <div class="card-phone">(205) 555-024</div>
+      <div class="card-address">1786 w Dallas St underfield</div>
+    </div>
+    <div class="edit">✏️</div>
+  </div>
+
+  <div class="adress"> + ADD ADRESS</div>
+
+  <h1 class="pay"> Payment method</h1>
+
+  <div class="payment-card">
+    <div class="payment-left">
+      <img src="../assets/paypal.png" alt="PayPal">
+      <span class="payment-text">PayPal</span>
+    </div>
+    <div class="radio">
+        </div>
+    </div>
+
+ <a href="../Succes2/succes2.html"><div class="boton-pay"> PAY NOW  </div></a>   
+
+
+
+ 
+
 </body>
 </html>
