--- a/Succes2/succes2.html
+++ b/Succes2/succes2.html
@@ -9,8 +9,18 @@
 </head>
 <body>
 
-    <div class="padre2">
-        <div class="circulo3"> <img src="../assets/puntos.png" alt=""></div>
+    
+    <div class="padre2"> 
+
+        <a href="../Notificacion/noti.html"><div class="circulo2"> <img src="../assets/Vector 2.png" alt=""></div>
+        <h1 class="titulo3"> Thank you</h1>
+        <p class="parrafo3">Your Order will be delivered with invoice #9ds69hs.
+             You can track the delivery in the
+             order section.</p>
+        <div class="boton1"> Continue order </div>
+        </a>
+
+
     </div>
     
 </body>
