Se finaliza proyecto

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -50,7 +50,7 @@
       </div>
 
     </div>
-    <div class="Menu2"> <img src="../assets/bottom_navigation_menu.png" alt=""></div>
+    <a href="../cartEmpty/empty.html"><div class="Menu2"> <img src="../assets/bottom_navigation_menu.png" alt=""></div></a>
   </div>
 
 </body>
